--- a/html기초1/index.html
+++ b/html기초1/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Document</title>
+    여기는 head
 </head>
 <body>
     
+    나는 html이다
+
 </body>
 </html>
